// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/divider/demo/horizontal.md correctly 1`] = `
<div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="alu-divider alu-divider-horizontal"
  />
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="alu-divider alu-divider-horizontal alu-divider-with-text"
  >
    <span
      class="alu-divider-inner-text"
    >
      With Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="alu-divider alu-divider-horizontal alu-divider-dashed"
  />
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`renders ./components/divider/demo/orientation.md correctly 1`] = `
<div>
  <div
    class="alu-divider alu-divider-horizontal alu-divider-with-text-left"
  >
    <span
      class="alu-divider-inner-text"
    >
      Left Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="alu-divider alu-divider-horizontal alu-divider-with-text-right"
  >
    <span
      class="alu-divider-inner-text"
    >
      Right Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`renders ./components/divider/demo/vertical.md correctly 1`] = `
<div>
  Text
  <div
    class="alu-divider alu-divider-vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
  <div
    class="alu-divider alu-divider-vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
</div>
`;
